--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,10 @@ environment:
   sdk: '>=3.3.2 <4.0.0'
 
 dependencies:
+  firebase_core: ^2.31.0
   flutter:
     sdk: flutter
-  http: ^1.1.0
+  http: ^1.2.1
   provider: ^6.1.2
 
 dev_dependencies:
